--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Maven coordinates
-appGroup=dev.opensavvy.playground
+appGroup=dev.opensavvy.sentier
 
 # Allow Gradle to execute tasks from different subprojects in parallel.
 org.gradle.parallel=true
